# miniHSM

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
console_src/: index.php  logout.php
console_src/app/: api.php  file.php  index.php
console_src/assets/css/: app.css
console_src/assets/js/: app.js
console_src/lib/: auth.php  db.php  icons.php
docs/: CHANGELOG_PENDIENTES.md  CONTEXTO_FIRMADO_BLOCKCHAIN.md  DISENO_AGENTE.md  DISENO_CONSOLE.md  DISENO_CUSTODIA_P12.md  DISENO_PANEL.md  DISENO_WALLET_EVM.md  FLASHEO_Y_LOG.md  PLAN_CUSTODIA_FASES.md  PLAN_DE_TRABAJO.md
docs/BD/: DISENO_BD.md
docs/console/: PLAN_DE_TRABAJO_CONSOLE.md
docs/console/analisis/: IMPACTO_CUSTODIA.md  PANEL_USUARIO.md  README.md
docs/console/desarrollo/: ENDPOINTS.md  PEDIDOS_AL_API.md  README.md
docs/console/desarrollo/sql/: 01_schema.sql  02_seed.sql  03_sign_events.sql  04_sign_requests_extra.sql  05_estado_rechazado.sql  06_seed_inbox.sql  07_sign_designs.sql  08_sign_requests_design.sql  09_seed_designs.sql
docs/console/diseno/: PANEL_USUARIO.md  README.md
docs/console/produccion/: README.md
docs/console/pruebas/: README.md
firmware/: .gitignore  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c  version.h
firmware/main/agent_crypto/: agent_crypto.c  agent_crypto.h
firmware/main/agent_store/: agent_store.c  agent_store.h
firmware/main/attestation/: attestation.c  attestation.h
firmware/main/audit_engine/: audit_engine.c  audit_engine.h
firmware/main/captive_portal/: captive_portal.c  captive_portal.h
firmware/main/cc_helpers/: cc_helpers.c  cc_helpers.h
firmware/main/ceremony/: ceremony.c  ceremony.h
firmware/main/cert_manager/: cert_manager.c  cert_manager.h
firmware/main/crypto_engine/: crypto_engine.c  crypto_engine.h
firmware/main/custody_manager/: custody_manager.c  custody_manager.h
firmware/main/heartbeat/: heartbeat.c  heartbeat.h
firmware/main/match_engine/: match_engine.c  match_engine.h
firmware/main/network_engine/: network_engine.c  network_engine.h
firmware/main/policy_engine/: policy_engine.c  policy_engine.h
firmware/main/vault_manager/: vault_manager.c  vault_manager.h
firmware/main/wallet_crypto/: wallet_crypto.c  wallet_crypto.h
firmware/main/wifi_provision/: wifi_provision.c  wifi_provision.h
firmware/test_client/: test_client.py
main/: CMakeLists.txt  main.c
main/audit_engine/: audit_engine.c
main/crypto_engine/: crypto_engine.c  crypto_engine.h
main/network_engine/: network_engine.h
main/policy_engine/: policy_engine.h
optimizer/: README.md  requirements.txt
optimizer/api/: credentials.py  devices.py  main.py  signatures.py
optimizer/minihsm/: agent_keys.py  client.py  crypto_match.py  device_secrets.py  job_queue.py  pdf_jobs.py  registry.py  sold_devices.py
optimizer/signing/: cades.py  dev_pki.py  pades.py  pades_polling.py  xades.py
optimizer/web/: firmar-custodia.js  firmar.html
optimizer/web/custodia/: app.js
optimizer/web/enroll/: app.js
