idf_component_register(
    SRCS
        "main.c"
        "crypto_engine/crypto_engine.c"
        "vault_manager/vault_manager.c"
        "cert_manager/cert_manager.c"
        "policy_engine/policy_engine.c"
        "audit_engine/audit_engine.c"
        "network_engine/network_engine.c"
        "heartbeat/heartbeat.c"
        "wifi_provision/wifi_provision.c"
        "captive_portal/captive_portal.c"
        "match_engine/match_engine.c"
        "cc_helpers/cc_helpers.c"
        "custody_manager/custody_manager.c"
        "ceremony/ceremony.c"
        "attestation/attestation.c"
        "wallet_crypto/wallet_crypto.c"
        "agent_crypto/agent_crypto.c"
        "agent_store/agent_store.c"
    INCLUDE_DIRS
        "."
        "crypto_engine"
        "vault_manager"
        "cert_manager"
        "policy_engine"
        "audit_engine"
        "network_engine"
        "heartbeat"
        "wifi_provision"
        "captive_portal"
        "match_engine"
        "cc_helpers"
        "custody_manager"
        "ceremony"
        "attestation"
        "wallet_crypto"
        "agent_crypto"
        "agent_store"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_http_server
        esp_http_client
        esp_timer
        esp_system
        lwip
        mbedtls
        esp_hw_support
        esp-tls
        espressif__cjson
    EMBED_FILES
        "web_assets/logo.png"
)
